# File_Converter

./: .gitignore  README.md  R_Rmd.py  Rmd_pdf.py  agent.py  combine_files.py  csv_md.py  csv_xlsx.py  docx_pdf.py  heic_jpg.py  heic_md.py  html_pdf.py  ipynb_pdf.py  jpeg_pdf.py  jpg_md.py  jpg_ocr.py  jpg_pdf.py  md_pdf.py  openai_pdf_md.py  pdf_md.py  png_pdf.py  pptx_md.py  pptx_pdf.py  pyproject.toml  requirements.txt  sql_pdf.py  ss_text.py  ss_txt.py  ss_txt2.py  txt_pdf.py  xlsx_csv.py
backend/: R_Rmd.py  Rmd_pdf.py  agent.py  combine_files.py  csv_md.py  csv_xlsx.py  docx_pdf.py  jpg_md.py  md_pdf.py  openai_pdf_md.py  pdf_md.py  pptx_pdf.py  server.py  sql_pdf.py  ss_txt.py  txt_pdf.py  xlsx_csv.py
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
