[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-converter"
version = "1.0.0"
description = "Simple scripts to convert files between different formats with AI agent support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Evan"}
]

dependencies = [
    # AI Agent & OpenAI
    "openai-agents>=0.5.0",
    "openai>=2.7.1",
    "vision-parse>=0.1.13",
    "python-dotenv>=1.1.1",
    
    # PDF Generation & Manipulation
    "reportlab>=4.4.4",
    "pypdf>=6.0.0",
    "pdfplumber>=0.11.7",
    "pdfminer-six>=20250506",
    "pymupdf>=1.26.4",
    "pypdf2>=3.0.1",
    "pypdfium2>=4.30.0",
    
    # Document Processing
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "docx2txt>=0.9",
    "extract-msg>=0.29.0",
    
    # Image Processing
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "opencv-python>=4.12.0.88",
    
    # Data Processing
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.5",
    
    # Jupyter Notebooks
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "nbconvert>=7.16.6",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    
    # Plotting
    "matplotlib>=3.10.3",
    
    # Database
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "sqlparse>=0.5.3",
    
    # Web & HTML Processing
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "markdownify>=1.2.0",
    "lxml>=6.0.0",
    
    # Audio
    "speechrecognition>=3.14.3",
    
    # Utilities
    "python-magic>=0.4.27",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "rich>=14.0.0",
    "click>=8.1.8",
    "typer>=0.15.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/converter"
Repository = "https://github.com/yourusername/converter"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
