[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-converter"
version = "1.0.0"
description = "Simple scripts to convert files between different formats with AI agent support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Evan"}
]
keywords = [
    "file-conversion",
    "pdf",
    "markdown",
    "jupyter",
    "ocr",
    "ai-agent",
    "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = [
    # AI Agent & OpenAI
    "openai-agents>=0.5.0",
    "openai>=2.7.1",
    "vision-parse>=0.1.13",
    "python-dotenv>=1.1.1",
    
    # PDF Generation & Manipulation
    "reportlab>=4.4.4",
    "pypdf>=6.0.0",
    "pdfplumber>=0.11.7",
    "pdfminer-six>=20250506",
    "pymupdf>=1.26.4",
    "pypdf2>=3.0.1",
    "pypdfium2>=4.30.0",
    
    # Document Processing
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "docx2txt>=0.9",
    "extract-msg>=0.29.0",
    
    # Image Processing
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "opencv-python>=4.12.0.88",
    
    # Data Processing
    "pandas>=2.2.3",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.5",
    
    # Jupyter Notebooks
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "nbconvert>=7.16.6",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    
    # Plotting
    "matplotlib>=3.10.3",
    
    # Database
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "sqlparse>=0.5.3",
    
    # Web & HTML Processing
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "markdownify>=1.2.0",
    "lxml>=6.0.0",
    
    # Audio
    "speechrecognition>=3.14.3",
    
    # Utilities
    "python-magic>=0.4.27",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "rich>=14.0.0",
    "click>=8.1.8",
    "typer>=0.15.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/evan/converter"
Repository = "https://github.com/evan/converter"

[project.scripts]
file-convert-agent = "agent:run_agent"

[tool.hatch.build.targets.wheel]
packages = []
only-include = [
    "agent.py",
    "combine_files.py",
    "docx_pdf.py",
    "html_pdf.py",
    "ipynb_pdf.py",
    "jpg_md.py",
    "jpg_pdf.py",
    "md_pdf.py",
    "openai_pdf_md.py",
    "pdf_md.py",
    "png_pdf.py",
    "pptx_md.py",
    "pptx_pdf.py",
    "R_Rmd.py",
    "Rmd_pdf.py",
    "sql_pdf.py",
    "ss_txt.py",
    "ss_txt2.py",
    "txt_pdf.py",
    "xlsx_csv.py",
    "csv_xlsx.py",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "agent.py",
    "combine_files.py",
    "docx_pdf.py",
    "html_pdf.py",
    "ipynb_pdf.py",
    "jpg_md.py",
    "jpg_pdf.py",
    "md_pdf.py",
    "openai_pdf_md.py",
    "pdf_md.py",
    "png_pdf.py",
    "pptx_md.py",
    "pptx_pdf.py",
    "R_Rmd.py",
    "Rmd_pdf.py",
    "sql_pdf.py",
    "ss_txt.py",
    "ss_txt2.py",
    "txt_pdf.py",
    "xlsx_csv.py",
    "csv_xlsx.py",
    "pyproject.toml",
    "README.md",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
